# matchmatrix

./: .env.example  .gitignore  AGENTS.md  MatchMatrix_CODEX_MASTER_PROMPT.md  MatchMatrix_FINAL_PRD.md  README.md
apps/backend/: Dockerfile  README.md  alembic.ini  pyproject.toml
apps/backend/alembic/: env.py
apps/backend/alembic/versions/: 20260620_0001_auth_foundation.py
apps/backend/app/: __init__.py  main.py
apps/backend/app/auth/: __init__.py  router.py  security.py  service.py  totp.py
apps/backend/app/core/: config.py
apps/backend/app/db/: models.py  session.py
apps/backend/scripts/: start.sh
apps/backend/tests/: conftest.py  test_alembic_config.py  test_auth_api.py  test_auth_security.py  test_auth_service.py  test_backend_container.py  test_config.py  test_db_session.py  test_health.py  test_models.py
apps/frontend/: README.md
apps/grok-worker/: README.md
apps/scheduler/: README.md
docs/architecture/: README.md
docs/deployment/: README.md
docs/superpowers/plans/: 2026-06-20-matchmatrix-production-delivery.md
infra/: docker-compose.yml
infra/nginx/: matchmatrix.conf.example
infra/scripts/: preflight.ps1
